<resources>
    <string name="app_name">TMC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="enable_gps">Enable GPS</string>
    <string name="yalla">YALLA !</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hi">HI</string>
    <string name="login">Login</string>
    <string name="tmc_account">TMC Account</string>
</resources>
